--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -5,10 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
-    android:background="#ff0000">
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tvAlpha"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#33000000"
+        android:textColor="#ffffff"
+        android:text="wdddddddd"
+        android:gravity="center"
+        android:textSize="40dp"/>
     <com.example.wuxiangyu.first.LyricView
+        android:background="#ff0000"
         android:id="@+id/lyricView"
         android:layout_width="match_parent"
         android:layout_height="250dp" />
