--- a/app/src/main/res/layout/activity_daynight_main.xml
+++ b/app/src/main/res/layout/activity_daynight_main.xml
@@ -30,4 +30,9 @@ android:orientation="vertical">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/comment_no_comment"/>
+    <Button
+        android:id="@+id/btnPlay"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="play"/>
 </LinearLayout>
