--- a/app/src/main/res/layout/activity_daynight_main.xml
+++ b/app/src/main/res/layout/activity_daynight_main.xml
@@ -25,7 +25,7 @@ android:orientation="vertical">
         android:text="wuxiangtu"
         android:gravity="center"
         android:textSize="25dp"/>
-    <ImageView
+    <com.example.wuxiangyu.daynight.MyImageView
         android:id="@+id/ivColorFilter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
