--- a/app/src/main/res/layout/toast_bg.xml
+++ b/app/src/main/res/layout/toast_bg.xml
@@ -8,7 +8,7 @@
     android:paddingBottom="12dp"
     android:paddingLeft="50dp"
     android:paddingRight="50dp"
-    android:background="@color/text_color">
+    android:background="?attr/text_bg">
     <TextView
         android:id="@+id/tvToastContent"
         android:layout_width="wrap_content"
