--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,17 +7,9 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/tvNextActivity"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="next activity"
+        android:text="this is login fragment"
         android:gravity="center"/>
-    <TextView
-        android:id="@+id/tvNextGraph"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="next graph"
-        android:gravity="center"
-        android:layout_marginTop="50dp"/>
 
 </FrameLayout>
