--- a/app/src/main/res/menu/navigations_menu.xml
+++ b/app/src/main/res/menu/navigations_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item
-    android:id="@id/startFragment"
-    android:icon="@drawable/ic_home"
-    android:title="start" />
-<item
-    android:id="@id/secondFragment"
-    android:icon="@drawable/ic_android"
-    android:title="second" />
-<item
-    android:id="@id/thirdFragment"
-    android:icon="@drawable/ic_android"
-    android:title="login" />
+    <item
+        android:id="@id/firstFragment"
+        android:icon="@drawable/ic_home"
+        android:title="start" />
+    <item
+        android:id="@id/secondFragment"
+        android:icon="@drawable/ic_android"
+        android:title="second" />
+    <item
+        android:id="@id/thirdFragment"
+        android:icon="@drawable/ic_android"
+        android:title="login" />
 </menu>
