--- a/app/src/main/res/menu/navigations_menu.xml
+++ b/app/src/main/res/menu/navigations_menu.xml
@@ -11,5 +11,5 @@
     <item
         android:id="@id/thirdFragment"
         android:icon="@drawable/ic_android"
-        android:title="login" />
+        android:title="third" />
 </menu>
