--- a/app/src/main/res/layout/activity_navigations.xml
+++ b/app/src/main/res/layout/activity_navigations.xml
@@ -16,12 +16,12 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigation">
-        <fragment
-            android:id="@+id/rootFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            app:defaultNavHost="true"
-            app:navGraph="@navigation/navigations_graph" />
+        <!--<fragment-->
+            <!--android:id="@+id/rootFragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:name="androidx.navigation.fragment.NavHostFragment"-->
+            <!--app:defaultNavHost="true"-->
+            <!--app:navGraph="@navigation/navigations_graph" />-->
     </FrameLayout>
 </android.support.constraint.ConstraintLayout>
