--- a/app/src/main/res/layout/fragment_navigations_first_suba.xml
+++ b/app/src/main/res/layout/fragment_navigations_first_suba.xml
@@ -3,15 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btnGoSubA"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="go Sub A"/>
     <TextView
         android:id="@+id/tvFirst"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="first fragment"
+        android:text="first fragment, sub a"
         android:gravity="center"/>
 </android.support.constraint.ConstraintLayout>
