--- a/app/src/main/res/layout/fragment_navigations_third.xml
+++ b/app/src/main/res/layout/fragment_navigations_third.xml
@@ -3,10 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/btnGoSubA"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="to third suba"/>
     <TextView
         android:id="@+id/tvFirst"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="second fragment"
+        android:text="third fragment"
         android:gravity="center"/>
 </android.support.constraint.ConstraintLayout>
