--- a/app/src/main/res/layout/fragment_navigations_third_suba.xml
+++ b/app/src/main/res/layout/fragment_navigations_third_suba.xml
@@ -7,6 +7,6 @@
         android:id="@+id/tvFirst"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="third fragment"
+        android:text="third fragment sub a"
         android:gravity="center"/>
 </android.support.constraint.ConstraintLayout>
