--- a/app/src/main/res/layout/fragment_navigations_first.xml
+++ b/app/src/main/res/layout/fragment_navigations_first.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
         android:id="@+id/btnGoSubA"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="go Sub A"/>
+    <Button
+        android:id="@+id/btnSecondSubA"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="go Second Sub A"
+        app:layout_constraintTop_toBottomOf="@id/btnGoSubA"/>
     <TextView
         android:id="@+id/tvFirst"
         android:layout_width="match_parent"
