feat: argument在xml中传递参数

--- a/app/src/main/res/navigation/nagivations_first.xml
+++ b/app/src/main/res/navigation/nagivations_first.xml
@@ -18,6 +18,9 @@
         android:id="@+id/navigationsFirstSubAFragment"
         android:name="com.example.wuxiangyu.navisecond.first.NavigationsFirstSubAFragment"
         android:label="NavigationsFirstSubAFragment" >
+        <argument
+            android:name="myarg"
+            android:defaultValue="Android!"/>
         <action
             android:id="@+id/action_navigationsFirstSubAFragment_to_navigationsSecondActivity"
             app:destination="@id/navigationsSecondActivity" />
