feat: deeplink接入，问题：第一个navigation的不能通过deeplink跳转到第二个navigation中

--- a/app/src/main/res/layout/fragment_navigations_first.xml
+++ b/app/src/main/res/layout/fragment_navigations_first.xml
@@ -15,6 +15,12 @@
         android:layout_height="50dp"
         android:text="go Second Sub A"
         app:layout_constraintTop_toBottomOf="@id/btnGoSubA"/>
+    <Button
+        android:id="@+id/btnDeeplink"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="deeplink to sub a"
+        app:layout_constraintTop_toBottomOf="@id/btnSecondSubA"/>
     <TextView
         android:id="@+id/tvFirst"
         android:layout_width="match_parent"
