--- a/app/src/main/res/navigation/nagivations_second.xml
+++ b/app/src/main/res/navigation/nagivations_second.xml
@@ -14,5 +14,8 @@
     <fragment
         android:id="@+id/navigationsSecondSubAFragment"
         android:name="com.example.wuxiangyu.navisecond.second.NavigationsSecondSubAFragment"
-        android:label="NavigationsSecondSubAFragment" />
+        android:label="NavigationsSecondSubAFragment" >
+        <deepLink
+            app:uri="seu://seu.com/secondsub"/>
+    </fragment>
 </navigation>
