--- a/app/src/main/res/navigation/nagivations_first.xml
+++ b/app/src/main/res/navigation/nagivations_first.xml
@@ -36,5 +36,8 @@
     <activity
         android:id="@+id/navigationsSecondActivity"
         android:name="com.example.wuxiangyu.navisecond.NavigationsSecondActivity"
-        android:label="NavigationsSecondActivity" />
+        android:label="NavigationsSecondActivity" >
+        <deepLink
+            app:uri="seu://seu.com/navigationssecond"/>
+    </activity>
 </navigation>
