--- a/app/src/main/res/layout/activity_navigations_second.xml
+++ b/app/src/main/res/layout/activity_navigations_second.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/tvContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="navigation second activity"
