--- a/app/src/main/res/navigation/nagivations_first.xml
+++ b/app/src/main/res/navigation/nagivations_first.xml
@@ -12,7 +12,7 @@
             app:destination="@id/navigationsFirstSubAFragment" />
         <action
             android:id="@+id/action_navigationsFirstFragment_to_navigationsSecondSubAFragment"
-            app:destination="@id/navigationsSecondSubAFragment" />
+            app:destination="@id/navigations_second_sub" />
     </fragment>
     <fragment
         android:id="@+id/navigationsFirstSubAFragment"
@@ -29,10 +29,10 @@
             android:id="@+id/action_navigationsFirstSubAFragment_to_navigationsSecondActivity"
             app:destination="@id/navigationsSecondActivity" />
     </fragment>
-    <fragment
-        android:id="@+id/navigationsSecondSubAFragment"
-        android:name="com.example.wuxiangyu.navisecond.second.NavigationsSecondSubAFragment"
-        android:label="NavigationsSecondSubAFragment" />
+    <!--<fragment-->
+        <!--android:id="@+id/navigationsSecondSubAFragment"-->
+        <!--android:name="com.example.wuxiangyu.navisecond.second.NavigationsSecondSubAFragment"-->
+        <!--android:label="NavigationsSecondSubAFragment" />-->
     <activity
         android:id="@+id/navigationsSecondActivity"
         android:name="com.example.wuxiangyu.navisecond.NavigationsSecondActivity"
@@ -40,4 +40,6 @@
         <deepLink
             app:uri="seu://seu.com/navigationssecond"/>
     </activity>
+
+    <include app:graph="@navigation/navigations_second_sub"/>
 </navigation>
