feat: livedata,viewmodel

--- a/app/src/main/res/menu/navigations_menu.xml
+++ b/app/src/main/res/menu/navigations_menu.xml
@@ -12,4 +12,8 @@
         android:id="@id/thirdFragment"
         android:icon="@drawable/ic_android"
         android:title="third" />
+    <item
+        android:id="@id/gankFragment"
+        android:icon="@drawable/ic_android"
+        android:title="gank" />
 </menu>
