--- a/app/src/main/res/layout/fragment_gank.xml
+++ b/app/src/main/res/layout/fragment_gank.xml
@@ -7,10 +7,16 @@
     <include
         android:id="@+id/idHead"
         layout="@layout/head_view"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvContent"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
         app:layout_constraintTop_toBottomOf="@id/idHead"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
