feat: room可以缓存数据。

--- a/app/src/main/res/layout/item_gank.xml
+++ b/app/src/main/res/layout/item_gank.xml
@@ -45,5 +45,12 @@
         android:layout_alignParentRight="true"
         android:text="Android"
         android:layout_marginRight="10dp"/>
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@id/ivAuthor"
+        android:layout_marginRight="10dp"/>
 
 </RelativeLayout>
