--- a/app/src/main/res/layout/fragment_gank.xml
+++ b/app/src/main/res/layout/fragment_gank.xml
@@ -19,4 +19,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
+    <Button
+        android:id="@+id/btnOpen"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 </android.support.constraint.ConstraintLayout>
