refactor：修改报名。1.rename；2.修改gradle中包名称

--- a/app/src/main/res/layout/activity_navigations_third.xml
+++ b/app/src/main/res/layout/activity_navigations_third.xml
@@ -16,7 +16,7 @@
         android:text="wdddddddd"
         android:gravity="center"
         android:textSize="40dp"/>
-    <com.example.wuxiangyu.first.LyricView
+    <com.example.wuxiangyu.haha.LyricView
         android:background="#ff0000"
         android:id="@+id/lyricView"
         android:layout_width="match_parent"
